duże litery i obrazki

--- a/en/portfolio/kraszewskiego.html
+++ b/en/portfolio/kraszewskiego.html
@@ -156,7 +156,7 @@
           </div>
           <div class="py-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full"
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full uppercase"
             >
               Axonometric
             </h2>
@@ -165,13 +165,13 @@
 
           <div class="py-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center uppercase"
             >
               Floor plans
             </h2>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
               >
                 Level -1
               </h3>
@@ -179,7 +179,7 @@
             </div>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
               >
                 Level 0
               </h3>
@@ -191,7 +191,7 @@
             </div>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
               >
                 Level +1 (repetitive floor)
               </h3>
@@ -203,7 +203,7 @@
             </div>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
               >
                 Level +4
               </h3>
@@ -216,7 +216,7 @@
           </div>
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
             >
               Detail floor
             </h2>
@@ -228,7 +228,7 @@
           </div>
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
             >
               Visualizations
             </h2>
