--- a/en/portfolio/urban.html
+++ b/en/portfolio/urban.html
@@ -113,7 +113,7 @@
 
     <section class="pt-10 px-3">
       <div class="w-full flex items-center flex-col">
-        <h1 class="bg-white top-16 sticky text-2xl text-center w-full">
+        <h1 class="bg-white top-16 sticky text-2xl text-center w-full uppercase">
           Reconstruction of the urban market in Pleszew
         </h1>
         <div class="flex items-center flex-col w-full lg:w-3/4">
@@ -150,13 +150,13 @@
         </div>
         <div class="py-4">
           <h2
-            class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
+            class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center uppercase"
           >
-            SITE ANALYSIS
+            Site analysis
           </h2>
           <div>
             <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
             >
               Landscape
             </h3>
@@ -168,7 +168,7 @@
           </div>
           <div>
             <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
             >
               Composition
             </h3>
@@ -181,13 +181,13 @@
         </div>
         <div class="py-4">
           <h2
-            class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
+            class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center uppercase"
           >
             Floor Plan
           </h2>
           <div>
             <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
             >
               Market square
             </h3>
@@ -198,7 +198,7 @@
           </div>
           <div>
             <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
             >
               Rainwater menagment diagram
             </h3>
@@ -211,7 +211,7 @@
         </div>
         <div class="pb-4">
           <h2
-            class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
           >
             Before/After
           </h2>
