--- a/en/portfolio/industrial.html
+++ b/en/portfolio/industrial.html
@@ -112,7 +112,7 @@
 
     <section class="pt-10 px-3">
       <div class="w-full flex items-center flex-col">
-        <h1 class="bg-white top-16 sticky text-2xl text-center w-full">
+        <h1 class="bg-white top-16 sticky text-2xl text-center w-full uppercase">
           Project of an industrial hall
         </h1>
         <div class="flex items-center flex-col w-full lg:w-3/4">
@@ -150,7 +150,7 @@
 
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
             >
               Land development plan wycentrować ryzunek z innymi
             </h2>
@@ -162,14 +162,14 @@
           </div>
           <div class="py-4">
             <h2
-              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center uppercase"
             >
               Floor plan
             </h2>
             dodać zestawienie powierzchni przyklejone do końca rzutów
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
               >
                 Level 0
               </h3>
@@ -181,7 +181,7 @@
             </div>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
               >
                 Level +1
               </h3>
@@ -193,7 +193,7 @@
             </div>
             <div>
               <h3
-                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
               >
                 Level +2
               </h3>
@@ -206,7 +206,7 @@
           </div>
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
             >
               Sections
             </h2>
@@ -223,12 +223,12 @@
           </div>
           <div class="pb-4">
             <h2
-              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
             >
               Details
             </h2>
             <h3
-              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full uppercase"
             >
             Connecting the roof with the wall / attaching the sandwich panel to the column / installing doors in the sandwich panel
             </h3>
@@ -241,7 +241,7 @@
         </div>
         <div class="pb-4">
           <h2
-            class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full uppercase"
           >
             Visualisations
           </h2>
