menu w portfolio, pl/en, stopki

--- a/en/index.html
+++ b/en/index.html
@@ -423,7 +423,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3">
               <img
                 class="h-5 w-5"
                 src="../assets/icons/linkedin.svg"
@@ -447,8 +447,8 @@
         <span class="w-full" id="footer"></span>
       </footer>
     </div>
-    <!-- contact -->
 
-    <script src="../script.js"></script>
+    <script src="../global.js"></script>
+    <script src="../main-page.js"></script>
   </body>
 </html>
