--- a/index.html
+++ b/index.html
@@ -410,11 +410,30 @@
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Kontakt</h2>
           <div class="text-center md:text-left">
-            <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
-            <div class="mb-2">
-              Linkedin: linkedin.com/in/zuzanna-kuszyk-70b57626b/
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="./assets/icons/email.svg"
+                alt="Email: "
+              />
+              <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2">Poznań</div>
+            <div class="mb-2 flex gap-3">
+              <img
+                class="h-5 w-5"
+                src="./assets/icons/linkedin.svg"
+                alt="Linkedin: "
+              />
+              <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
+            </div>
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="./assets/icons/location.svg"
+                alt="Lokalizacja: "
+              />
+              <span>Poznań</span>
+            </div>
           </div>
         </div>
       </section>
@@ -423,8 +442,8 @@
         <span class="w-full" id="footer"></span>
       </footer>
     </div>
-    <!-- contact -->
 
-    <script src="script.js"></script>
+    <script src="./global.js"></script>
+    <script src="./main-page.js"></script>
   </body>
 </html>
