--- a/portfolio/stable.html
+++ b/portfolio/stable.html
@@ -76,7 +76,7 @@
                     >O mnie</a
                   >
                   <a
-                    href="../index.html#contact"
+                    href="#contact"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Kontakt</a
                   >
@@ -91,7 +91,7 @@
                 pl
               </a>
               <a
-                href="/en/portfolio/stable.html"
+                href="../en/portfolio/stable.html"
                 class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 uppercase"
               >
                 en
@@ -116,7 +116,7 @@
               >O mnie</a
             >
             <a
-              href="../index.html#contact"
+              href="#contact"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               onclick="toggleMenu()"
               >Kontakt</a
@@ -126,114 +126,190 @@
       </nav>
     </section>
 
-  <section class="pt-10 px-3">
-    <div class="w-full flex items-center flex-col">
-      <h1 class="bg-white top-16 sticky text-2xl text-center w-full uppercase z-30">
-        Stajnia w Chwarszczanach
-      </h1>
-      <div class="flex items-center flex-col w-full lg:w-3/4">
-        <div>
-          <p class="pt-4">
-            Najważniejszym elementem badanego terenu jest stara, zdewastowana stajnia, która jest poddawana
-            rewitalizacji. Ze względu na ciekawą formę obiekt został uznany za główny aspekt projektu, narzucający
-            rozwiązania estetyczne i funkcjonalne w dalszych etapach prac nad koncepcją.
-            Podczas wizji lokalnej wykonano inwentaryzację, na podstawie której powstała koncepcja.
-            Stadnina składa się z magazynu, stajni, pastwisk i ujeżdżalni. Zapewnienie wszystkich niezbędnych elementów
-            do hodowli koni i prowadzenia ujeżdżalni.
-          <p>
-            Efektem tych prac, poza odrestaurowaną stajnią, jest przede wszystkim projekt domu jednorodzinnego,
-            przeznaczonego dla rodziny wielopokoleniowej (model rodziny 2+2+2), wiążącej życie zawodowe z prowadzeniem
-            ośrodka jeździeckiego.
-            Dom swoją estetyką nawiązuje do opisywanej wcześniej stajni, dzięki czemu doskonale wpisuje się w wiejski
-            krajobraz i zabudowę Chwarszczan.
-            Bryła budynku nakryta jest dwuspadowym dachem nachylonym pod kątem 35 stopni. Elewację natomiast wykończono
-            jasną cegłą, podobnie jak obiegający budynek gzyms. Dom stoi równolegle do kamiennej drogi biegnącej przez
-            działkę.
-            Przy wejściu do budynku znajdują się pomieszczenia gospodarcze i kuchnia, sypialnie dla rodziny
-            rozmieszczone są wzdłuż bocznych ścian budynku. Salon i jadalnia stanowią centralne elementy domu i są
-            otwarte na taras i ogród, z którego można podziwiać odrestaurowaną stajnię oraz Kaplicę Templariuszy -
-            dominantę kompozycyjną Chwarszczan.
-          </p>
-         
-        </div>
-        <div class="py-4">
-          <h2 class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full">
-            Projekt zagospodarowania terenu
-          </h2>
-          <img src="../assets/stable/PZT.jpg" />
-        </div>
+    <section class="pt-10 px-3">
+      <div class="w-full flex items-center flex-col">
+        <h1
+          class="bg-white top-16 sticky text-xl md:text-2xl text-center w-full uppercase z-30"
+        >
+          Stajnia w Chwarszczanach
+        </h1>
+        <div class="flex items-center flex-col w-full lg:w-3/4">
+          <div>
+            <p class="pt-4">
+              Najważniejszym elementem badanego terenu jest stara, zdewastowana
+              stajnia, która jest poddawana rewitalizacji. Ze względu na ciekawą
+              formę obiekt został uznany za główny aspekt projektu, narzucający
+              rozwiązania estetyczne i funkcjonalne w dalszych etapach prac nad
+              koncepcją. Podczas wizji lokalnej wykonano inwentaryzację, na
+              podstawie której powstała koncepcja. Stadnina składa się z
+              magazynu, stajni, pastwisk i ujeżdżalni. Zapewnienie wszystkich
+              niezbędnych elementów do hodowli koni i prowadzenia ujeżdżalni.
+            </p>
 
-        <div class="py-4">
-          <h2 class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center">
-            Rzuty
-          </h2>
-          <div>
-            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              Stajni
-            </h3>
-            <img class="pt-1" src="../assets/stable/rzut stajni.jpg" />
+            <p>
+              Efektem tych prac, poza odrestaurowaną stajnią, jest przede
+              wszystkim projekt domu jednorodzinnego, przeznaczonego dla rodziny
+              wielopokoleniowej (model rodziny 2+2+2), wiążącej życie zawodowe z
+              prowadzeniem ośrodka jeździeckiego. Dom swoją estetyką nawiązuje
+              do opisywanej wcześniej stajni, dzięki czemu doskonale wpisuje się
+              w wiejski krajobraz i zabudowę Chwarszczan. Bryła budynku nakryta
+              jest dwuspadowym dachem nachylonym pod kątem 35 stopni. Elewację
+              natomiast wykończono jasną cegłą, podobnie jak obiegający budynek
+              gzyms. Dom stoi równolegle do kamiennej drogi biegnącej przez
+              działkę. Przy wejściu do budynku znajdują się pomieszczenia
+              gospodarcze i kuchnia, sypialnie dla rodziny rozmieszczone są
+              wzdłuż bocznych ścian budynku. Salon i jadalnia stanowią centralne
+              elementy domu i są otwarte na taras i ogród, z którego można
+              podziwiać odrestaurowaną stajnię oraz Kaplicę Templariuszy -
+              dominantę kompozycyjną Chwarszczan.
+            </p>
           </div>
-          <div>
-            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              domu
-            </h3>
-            <img loading="lazy" class="pt-1" src="../assets/stable/rzut domu gospodarzy.jpg" />
+          <div class="py-4">
+            <h2
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full"
+            >
+              Projekt zagospodarowania terenu
+            </h2>
+            <img src="../assets/stable/PZT.jpg" />
           </div>
-        
-        </div>
-        <div class="pb-4">
-          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
-            Schemat konstrukcji dachu stajni
-          </h2>
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/stable/schemat  konstrukcji dachu stajni.jpg" />
-        </div>
 
-        <div class="py-4">
-          <h2 class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center">
-            Przekroje
-          </h2>
-          <div>
-            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              Przez stajnię
-            </h3>
-            <img class="pt-1" src="../assets/stable/przekrój przez stajnię.jpg" />
+          <div class="py-4">
+            <h2
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
+            >
+              Rzuty
+            </h2>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Stajni
+              </h3>
+              <img class="pt-1" src="../assets/stable/rzut stajni.jpg" />
+            </div>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                domu
+              </h3>
+              <img
+                loading="lazy"
+                class="pt-1"
+                src="../assets/stable/rzut domu gospodarzy.jpg"
+              />
+            </div>
           </div>
-          <div>
-            <h3 class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full">
-              Przez dom
-            </h3>
-            <img loading="lazy" class="pt-1" src="../assets/stable/przekrój przez dom.jpg" />
+          <div class="pb-4">
+            <h2
+              class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+            >
+              Schemat konstrukcji dachu stajni
+            </h2>
+            <img
+              loading="lazy"
+              class="pt-1 w-full text-center"
+              src="../assets/stable/schemat  konstrukcji dachu stajni.jpg"
+            />
           </div>
-        <div class="pb-4">
-          <h2 class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full">
-            Wizualizacje
-          </h2>
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/stable/wizualizacja stajni front.jpg" />
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/stable/wizualizacja stajni.jpg" />
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/stable/render domu od frontu.jpg stajni.jpg" />
-          <img loading="lazy" class="pt-1 w-full text-center" src="../assets/stable/render domu od strony ogrodu.jpg stajni.jpg" />
-        </div>
-      </div>
-    </div>
-  </section>
-  <div class="container border-t border-black md:mt-8 m-auto">
-    <section id="contact" class="container m-auto py-8 md:py-20">
-      <div class="flex md:justify-evenly flex-col items-center md:flex-row">
-        <h2 class="text-4xl font-semibold mb-5 md:mb-0">Kontakt</h2>
-        <div class="text-center md:text-left">
-          <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
-          <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
-          <div class="mb-2">Lokalizacja: Poznań</div>
+
+          <div class="py-4">
+            <h2
+              class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
+            >
+              Przekroje
+            </h2>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Przez stajnię
+              </h3>
+              <img
+                class="pt-1"
+                src="../assets/stable/przekrój przez stajnię.jpg"
+              />
+            </div>
+            <div>
+              <h3
+                class="sticky top-28 bg-white z-10 pt-4 mb-2 uppercase text-base text-center w-full"
+              >
+                Przez dom
+              </h3>
+              <img
+                loading="lazy"
+                class="pt-1"
+                src="../assets/stable/przekrój przez dom.jpg"
+              />
+            </div>
+            <div class="pb-4">
+              <h2
+                class="sticky mb-2 top-24 bg-white z-20 uppercase text-lg text-center w-full"
+              >
+                Wizualizacje
+              </h2>
+              <img
+                loading="lazy"
+                class="pt-1 w-full text-center"
+                src="../assets/stable/wizualizacja stajni front.jpg"
+              />
+              <img
+                loading="lazy"
+                class="pt-1 w-full text-center"
+                src="../assets/stable/wizualizacja stajni.jpg"
+              />
+              <img
+                loading="lazy"
+                class="pt-1 w-full text-center"
+                src="../assets/stable/render domu od frontu.jpg stajni.jpg"
+              />
+              <img
+                loading="lazy"
+                class="pt-1 w-full text-center"
+                src="../assets/stable/render domu od strony ogrodu.jpg stajni.jpg"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </section>
+    <div class="container border-t border-black md:mt-8 m-auto">
+      <section id="contact" class="container m-auto py-8 md:py-20">
+        <div class="flex md:justify-evenly flex-col items-center md:flex-row">
+          <h2 class="text-4xl font-semibold mb-5 md:mb-0">Kontakt</h2>
+          <div class="text-center md:text-left">
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="../assets/icons/email.svg"
+                alt="Email: "
+              />
+              <span>zuzannakuszyk.kontakt@gmail.com</span>
+            </div>
+            <div class="mb-2 flex gap-3">
+              <img
+                class="h-5 w-5"
+                src="../assets/icons/linkedin.svg"
+                alt="Linkedin: "
+              />
+              <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
+            </div>
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="../assets/icons/location.svg"
+                alt="Lokalizacja: "
+              />
+              <span>Poznań</span>
+            </div>
+          </div>
+        </div>
+      </section>
 
-    <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
-      <span class="w-full" id="footer"></span>
-    </footer>
-
-    <script src="../script.js"></script>
-  </div>
-</body>
-
+      <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
+        <span class="w-full" id="footer"></span>
+      </footer>
+    </div>
+    <script src="../global.js"></script>
+  </body>
 </html>
