--- a/en/portfolio/urban.html
+++ b/en/portfolio/urban.html
@@ -13,14 +13,14 @@
   <body>
     <section id="nav" class="pb-16">
       <!-- navbar -->
-      <nav class="bg-white fixed w-screen z-10">
+      <nav class="bg-white fixed w-screen z-50">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
           <div class="relative flex h-16 items-center justify-between">
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
               <!-- Mobile menu button-->
               <button
                 type="button"
-                class="inline-flex items-center justify-center p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
+                class="inline-flex items-center justify-center p-2 text-gray-700 hover:bg-opacity-90 hover:bg-black hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                 aria-controls="mobile-menu"
                 aria-expanded="false"
                 onclick="toggleMenu()"
@@ -66,23 +66,37 @@
                 <div class="flex space-x-">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                   <a
-                    href="../index.html#portfolio"
-                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                    >Portfolio</a
-                  >
-                  <a
-                    href="../index.html#about"
-                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                    aria-current="page"
-                    >About me</a
-                  >
-                  <a
-                    href="../index.html#contact"
-                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                    >Contact</a
-                  >
+                  href="../index.html#portfolio"
+                  class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
+                  >Portfolio</a
+                >
+                <a
+                  href="../index.html#about"
+                  class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
+                  aria-current="page"
+                  >About me</a
+                >
+                <a
+                  href="#contact"
+                  class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
+                  >Contact</a
+                >
                 </div>
               </div>
+            </div>
+            <div>
+              <a
+                href="../../portfolio/urban.html"
+                class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 mr-4 uppercase"
+              >
+                pl
+              </a>
+              <a
+                href=""
+                class="text-gray-900 text-sm md:text-base border-b border-black px-3 pb-1 hidden md:inline uppercase"
+              >
+                en
+              </a>
             </div>
           </div>
         </div>
@@ -93,17 +107,19 @@
             <a
               href="../index.html#portfolio"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
+              onclick="toggleMenu()"
               >Portfolio</a
             >
             <a
               href="../index.html#about"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
-              aria-current="page"
+              onclick="toggleMenu()"
               >About me</a
             >
             <a
-              href="../index.html#contact"
+              href="#contact"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
+              onclick="toggleMenu()"
               >Contact</a
             >
           </div>
@@ -252,7 +268,7 @@
               />
               <span>zuzannakuszyk.kontakt@gmail.com</span>
             </div>
-            <div class="mb-2 flex gap-3 items-center">
+            <div class="mb-2 flex gap-3">
               <img
                 class="h-5 w-5"
                 src="../../assets/icons/linkedin.svg"
@@ -276,6 +292,6 @@
         <span class="w-full" id="footer"></span>
       </footer>
     </div>
-    <script src="../../script.js"></script>
+    <script src="../../global.js"></script>
   </body>
 </html>
