--- a/portfolio/kindergarten.html
+++ b/portfolio/kindergarten.html
@@ -91,7 +91,7 @@
                 pl
               </a>
               <a
-                href="./en/index.html"
+                href="../en/portfolio/kindergarten.html"
                 class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 uppercase"
               >
                 en
@@ -287,9 +287,30 @@
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Kontakt</h2>
           <div class="text-center md:text-left">
-            <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
-            <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
-            <div class="mb-2">Poznań</div>
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="../assets/icons/email.svg"
+                alt="Email: "
+              />
+              <span>zuzannakuszyk.kontakt@gmail.com</span>
+            </div>
+            <div class="mb-2 flex gap-3">
+              <img
+                class="h-5 w-5"
+                src="../assets/icons/linkedin.svg"
+                alt="Linkedin: "
+              />
+              <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
+            </div>
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="../assets/icons/location.svg"
+                alt="Lokalizacja: "
+              />
+              <span>Poznań</span>
+            </div>
           </div>
         </div>
       </section>
@@ -297,8 +318,7 @@
       <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
         <span class="w-full" id="footer"></span>
       </footer>
-
-      <script src="../script.js"></script>
     </div>
+    <script src="../global.js"></script>
   </body>
 </html>
