--- a/portfolio/pool.html
+++ b/portfolio/pool.html
@@ -76,7 +76,7 @@
                     >O mnie</a
                   >
                   <a
-                    href="../index.html#contact"
+                    href="#contact"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Kontakt</a
                   >
@@ -91,7 +91,7 @@
                 pl
               </a>
               <a
-                href="/en/portfolio/pool.html"
+              href="../en/portfolio/pool.html"
                 class="text-gray-900 text-sm md:text-base px-3 hover:border-b hover:border-black pb-1 uppercase"
               >
                 en
@@ -116,7 +116,7 @@
               >O mnie</a
             >
             <a
-              href="../index.html#contact"
+              href="#contact"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               onclick="toggleMenu()"
               >Kontakt</a
@@ -246,9 +246,30 @@
         <div class="flex md:justify-evenly flex-col items-center md:flex-row">
           <h2 class="text-4xl font-semibold mb-5 md:mb-0">Kontakt</h2>
           <div class="text-center md:text-left">
-            <div class="mb-2">Email: zuzannakuszyk.kontakt@gmail.com</div>
-            <div class="mb-2">Linkedin: https://www.linkedin.com/in/zuzanna-kuszyk-70b57626b/</div>
-            <div class="mb-2">Lokalizacja: Poznań</div>
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="../assets/icons/email.svg"
+                alt="Email: "
+              />
+              <span>zuzannakuszyk.kontakt@gmail.com</span>
+            </div>
+            <div class="mb-2 flex gap-3">
+              <img
+                class="h-5 w-5"
+                src="../assets/icons/linkedin.svg"
+                alt="Linkedin: "
+              />
+              <span>linkedin.com/in/zuzanna-kuszyk-70b57626b/</span>
+            </div>
+            <div class="mb-2 flex gap-3 items-center">
+              <img
+                class="h-5 w-5"
+                src="../assets/icons/location.svg"
+                alt="Lokalizacja: "
+              />
+              <span>Poznań</span>
+            </div>
           </div>
         </div>
       </section>
@@ -256,8 +277,6 @@
       <footer class="py-1 mt-4 md:mt-10 text-xs text-right mr-4">
         <span class="w-full" id="footer"></span>
       </footer>
-
-      <script src="../script.js"></script>
-    </div>
+    </div>rc="../global.js"></script>
   </body>
 </html>
